[tool.poetry]
name = "image_storage"
version = "0.1.0"
description = ""
authors = ["Dmitry Lavrukhin <dlavrukhin@yandex.ru>"]

[tool.poetry.dependencies]
python = "~3.10.0"
fastapi = "~0.111"
uvicorn = "~0.30"
base58 = "2.1.1"
pydantic-settings = "~2.2.1"
pillow = "~10.3.0"
boto3 = "~1.34.118"
boto3-stubs = {version = "~1.34.118", extras = ["s3"]}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0"
pytest-socket = "~0.7.0"
moto = {version = "^5.0.9", extras = ["s3"]}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^24.4.2"
isort = "~5.13.2"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts ="""
    --capture=tee-sys
    -s
    -vv
    -p no:cacheprovider
    --strict-markers
    --disable-socket --allow-unix-socket
"""

[tool.black]
line-length = 120
target-version = ['py310']

[tool.mypy]
exclude = ['tests/',]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
