[tool.poetry]
package-mode = false
authors = ["Dmitry Lavrukhin <dlavrukhin@yandex.ru>"]
repository = "https://github.com/Eldies/image_storage"

[tool.poetry.dependencies]
python = "~3.14"
fastapi = ">=0.135"
uvicorn = ">=0.41.0"
base58 = "2.1.1"
pydantic-settings = ">=2.13.1"
pillow = ">=12.1.1"
boto3 = ">=1.42.59"
prometheus-fastapi-instrumentator = "^7.0.0"
sentry-sdk = {version = ">=2.53.0", extras = ["fastapi"]}
tenacity = ">=9.1.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.2"
pytest-cov = ">=7.0.0"
pytest-asyncio = ">=1.3.0"
pytest-socket = "~0.7.0"
moto = {version = "^5.0.9", extras = ["s3"]}
httpx = ">=0.28.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
boto3-stubs = { version = "*", extras = ["boto3", "s3"] }
flake8 = ">=7.3.0"
black = ">=26.1.0"
isort = ">=8.0.1"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:sentry_sdk.*"
]
addopts ="""
    --capture=tee-sys
    -s
    -vv
    -p no:cacheprovider
    --strict-markers
    --disable-socket --allow-unix-socket
    --cov --cov-config=pyproject.toml
"""

[tool.coverage.run]
data_file = ".cache/.coverage"
source = ["app"]
omit = ["tests/*"]
branch = true
concurrency = ["thread"]

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.black]
line-length = 120
target-version = ['py314']

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.isort]
profile = "black"
